[package]
name = "virtual-mqtt-device"
version = "0.1.0"
authors = ["Wayne Feng <wayne.feng@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.7"
futures = "0.1"
futures-timer = "0.1"
log = "0.4"
env_logger = "0.7.1"
json = "0.12.4"
