[package]
name = "virtual-mqtt-device"
version = "0.1.0"
authors = ["Wayne Feng <wayne.feng@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt-async-client = "0.1"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.2"
